RESOLVED FIXED 95656
-webkit-clip-path does not apply origin for polygon()
https://bugs.webkit.org/show_bug.cgi?id=95656
Summary -webkit-clip-path does not apply origin for polygon()
Dirk Schulze
Reported 2012-09-02 10:05:30 PDT
-webkit-clip-path does not apply origin for polygon().
Attachments
Patch (4.10 KB, patch)
2012-09-02 10:10 PDT, Dirk Schulze
no flags
Dirk Schulze
Comment 1 2012-09-02 10:10:17 PDT
Tim Horton
Comment 2 2012-09-04 20:48:12 PDT
Comment on attachment 161844 [details] Patch Seems reasonable to me considering the other cases in BasicShapes.
WebKit Review Bot
Comment 3 2012-09-04 20:57:33 PDT
Comment on attachment 161844 [details] Patch Clearing flags on attachment: 161844 Committed r127548: <http://trac.webkit.org/changeset/127548>
WebKit Review Bot
Comment 4 2012-09-04 20:57:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.