Source/WebCore/rendering/style/BasicShapes.cpp
@@ -82,11 +82,11 @@ void BasicShapePolygon::path(Path& path, const FloatRect& boundingBox)
     if (!length)
         return;
 
-    path.moveTo(FloatPoint(floatValueForLength(m_values.at(0), boundingBox.width()),
-                           floatValueForLength(m_values.at(1), boundingBox.width())));
+    path.moveTo(FloatPoint(floatValueForLength(m_values.at(0), boundingBox.width()) + boundingBox.x(),
+                           floatValueForLength(m_values.at(1), boundingBox.width()) + boundingBox.y()));
     for (size_t i = 2; i < length; i = i + 2) {
-        path.addLineTo(FloatPoint(floatValueForLength(m_values.at(i), boundingBox.width()),
-                                  floatValueForLength(m_values.at(i + 1), boundingBox.width())));
+        path.addLineTo(FloatPoint(floatValueForLength(m_values.at(i), boundingBox.width()) + boundingBox.x(),
+                                  floatValueForLength(m_values.at(i + 1), boundingBox.width()) + boundingBox.y()));
     }
     path.closeSubpath();
 }
